--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.GroupMemberActivity"></activity>
+        <activity android:name=".activities.AddGroupActivity"></activity>
+        <activity android:name=".activities.GroupMemberActivity" />
         <activity android:name=".activities.GroupActivity" />
         <activity android:name=".activities.Profile" />
         <activity android:name=".activities.HomeActivity">
