--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.AddMemberActivity"></activity>
+        <activity android:name=".activities.LogInActivity"></activity>
+        <activity android:name=".activities.AddMemberActivity" />
         <activity android:name=".activities.AddFeeActivity" />
         <activity android:name=".activities.AddGroupActivity" />
         <activity android:name=".activities.GroupMemberActivity" />
         <activity android:name=".activities.GroupActivity" />
-        <activity android:name=".activities.Profile" />
+        <activity android:name=".activities.ProfileActivity" />
         <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
