--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.LogInActivity"></activity>
-        <activity android:name=".activities.AddMemberActivity" />
-        <activity android:name=".activities.AddFeeActivity" />
-        <activity android:name=".activities.AddGroupActivity" />
-        <activity android:name=".activities.GroupMemberActivity" />
-        <activity android:name=".activities.GroupActivity" />
-        <activity android:name=".activities.ProfileActivity" />
-        <activity android:name=".activities.HomeActivity">
+        <activity android:name=".activities.SignUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.AddMemberActivity" />
+        <activity android:name=".activities.AddFeeActivity" />
+        <activity android:name=".activities.AddGroupActivity" />
+        <activity android:name=".activities.GroupMemberActivity" />
+        <activity android:name=".activities.GroupActivity" />
+        <activity android:name=".activities.ProfileActivity" />
+        <activity android:name=".activities.HomeActivity" />
         <activity android:name=".activities.MainActivity" />
     </application>
 
